# isocronas-almeria

./: .gitignore  .ignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  README.md  compose.yml  package-lock.json  package.json  pyproject.toml  stylelint.config.js
back/: clasification.py  constants.py  create_data.py  create_gpkg.py  create_test_data.py  docx_contents.py  docx_utils.py  execute.py  fake_geocode.py  file_info.py  get_bbox.py  google_places.py  google_raw.xlsx  match_municipality_names.py  mygeocode.py  odt2docx.py  prepare_columns.py  prepare_geocode.py  request_with_backoff.py  script.py  test_remove_trailing_dots.py  utils.py
config/: pyproject.toml
docs/: HACKING.md  development.md
docs/reports/: analisis_de_los_datos.md  categorizacion_de_los_pois.md  geocodificacion.md
front/: index.html  lingui.config.js  package-lock.json  package.json  vite.config.js
front/public/tools/: bboxes.json  domains.json
front/src/: App.css  App.jsx  App.test.jsx  Theme.js  main.jsx
front/src/app/l10n/: config.js  localizationConfig.js
front/src/app/map/: IsocronasAuxLayers.js  IsocronasBaseLayers.js  IsocronasFilterHelper.jsx  IsocronasFilterSelector.jsx  IsocronasMap.jsx  IsocronasMapActionsToolbar.jsx  IsocronasMapCategoriesSelector.jsx  IsocronasMapConfig.js  IsocronasMapControlPanel.jsx  IsocronasMapSelectPointAction.jsx  IsocronasMapTOC.jsx  IsocronasMapTransportAction.jsx  IsocronasMapTravelTimeAction.jsx  index.js
front/src/app/routes/: IsocronasRoutes.jsx  index.js
scripts/: clean.sh  deploy.sh  fixtures.sh  install.back.sh  install.front.sh  install.sh  migrate.sh  move_db_state_to.sh  reset_and_create_db.sh  start.sh  test.sh  variables.ini
scripts/docker/apache/: httpd-ssl.conf
scripts/util/: build_web_deploy_file.sh  check-os-deps.sh  deploy_from_repo.sh  echo_env_back.sh  echo_env_front.sh  geoserver_create.sh  geoserver_delete.sh  geoserver_utils.sh  output.sh  setup-custom.sh
server/: drop_and_create_db.sh  variables.ini
server/docker/: 10_postgis.sh
tests/: test_replace_middle_end_of_line.py
tools/: fixtures.sh
(+449 files in other folders)
